<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="View/Update Details"
        android:textAlignment="center"
        android:textColor="#1C3C7C"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <EditText
        android:id="@+id/stu1_rollno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>
    <EditText
        android:id="@+id/stu1_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_name_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_depts_label"/>
    <EditText
        android:id="@+id/stu_Dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_dept_hint"/>
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_email_label"/>
    <EditText
        android:id="@+id/stu_emailid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_emailid_hint"/>

    <Button
        android:id="@+id/change_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update" />


</LinearLayout>
</ScrollView>